# flyio-api-rs

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
src/api/: env.rs  mod.rs
src/api/flaps/: mod.rs  transport.rs  types.rs  unix.rs
src/entities/: go_time.rs  machine.rs  mod.rs  time_test_data.json
src/patterns/: mod.rs
