[package]
name = "flyio-api"
version = "0.1.0"
edition = "2021"
authors = ["Allison Pierson <allisonalichay@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/alichay/flyio-api-rs"
keywords = ["flyio", "fly", "cloud", "api"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.2"
backoff = { version = "0.4.0", features = ["tokio"] }
bytes = "1.4.0"
chrono = "0.4.26"
futures = "0.3.28"
phf = { version = "0.11.1", features = ["macros"] }
reqwest = "0.11.18"
serde = { version = "1.0.164", features = ["derive", "alloc"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["sync"] }
url = "2.4.0"
urlencoding = "2.1.2"